Update configuration, remove 32-bit dependencies, fix warning with native libs.